2018-01-11         Arnold D. Robbins     <arnold@skeeve.com>

	* compile, config.guess, config.rpath, config.sub,
	depcomp: Updated from GNULIB.

2018-01-11         Arnold D. Robbins     <arnold@skeeve.com>

	* filefuncs.c, fnmatch.c, fork.c, inplace.c, intdiv.c, ordchr.c,
	readdir.c, readdir_test.c, readfile.c, revoutput.c, revtwoway.c,
	rwarray.c, rwarray0.c, testext.c, time.c: Remove incorrect '*'
	on declarations of ext_id in sample extension code. Thanks to
	Panos Papadopoulos <panos1962@gmail.com> for the report.

2017-12-29         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac (fmod): Put AC_SEARCH_LIBS before the call
	to AC_CHECK_FUNCS and put fmod back into that list. Finally
	causes config.h to have the correct check for HAVE_FMOD.
	Thanks again to Michal Jaegermann <michal.jnn@gmail.com>.

2017-12-28         Arnold D. Robbins     <arnold@skeeve.com>

	More configuration fixes, mainly for Fedora. Thanks to
	Michal Jaegermann <michal.jnn@gmail.com> for the reports
	and for validating.

	* configure.ac (AC_HEADER_MAJOR): Comment out, no longer works.
	(sys/sysmacros.h, sys/mkdev.h): Check for header existence.
	(fmod): Check with AC_SEARCH_LIBs instead of AC_CHECK_FUNCS.
	* filefuncs.c: Rework header inclusion checks and order so
	that we get the `major' macro without warnings on Fedora.
	* fnmatch.c: Ditto.

2017-12-26         Arnold D. Robbins     <arnold@skeeve.com>

	* gawkfts.c (fts_safe_changedir): Add check for path not null
	before trying to open it. Thanks to Michal Jaegermann
	<michal.jnn@gmail.com> for the report.

2017-12-24          Michal Jaegermann    <michal.jnn@gmail.com>

	* intdiv.c: Fix compilation for MPFR 2.4.1.

2017-12-20         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Add support for the --enable-versioned-dir option
	in the main configure program.

2017-12-19         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Add --disable-mpfr to be in sync with main